# xbee_c_library

./: .gitignore  MIT-LICENSE.txt  README.md  Thumbs.db  project.yml
examples/EFM32/: example.c  port_efr32.c  uart_efr32.c
examples/RP2350/: example.c  port_rp2350.c  uart_rp2350.c
examples/arduino/: example.ino  port_arduino.c  port_arduino.cpp  uart_arduino.cpp
examples/efm32/: example.c  port_efm32.c
examples/rp2350/: CMakeLists.txt  example.c  port_rp2350.c
examples/stm32/: example.c  port_stm32.c
examples/stm32f1xx/: example.c  port_stm32.c  uart_stm32.c
examples/unix/: Makefile  example.c  port_unix.c  uart_unix.c  xbee_example
examples/windows/: Makefile  example.c  port_windows.c
include/: config.h  port.h  uart.h  xbee.h  xbee_3.h  xbee_api_frames.h  xbee_at_cmds.h  xbee_lr.h
ports/: port_arduino.c  port_efm32.c  port_rp2350.c  port_stm32.c  port_unix.c
src/: xbee.c  xbee_3.c  xbee_api_frames.c  xbee_at_cmds.c  xbee_lr.c
test/: test_._example.c  test_._port_rp2350.c  test_._port_stm32.c  test_._port_unix.c  test_._port_windows.c  test_CMakeCCompilerId.c  test_example.c  test_mbedtls_wrapper.c  test_picoboot_connection.c  test_port_arduino.c  test_port_efm32.c  test_port_rp2350.c  test_port_stm32.c  test_port_unix.c  test_port_windows.c  test_set_perms.c  test_test_uart.c  test_test_xbee.c  test_test_xbee_api_frames.c  test_uart.c  test_whereami.c  test_xbee.c  test_xbee_api_frames.c  test_xbee_at_cmds.c  test_xbee_lr.c
